--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "failhorn",
-  "displayName": "Fail Horn 🔊",
+  "displayName": "Fail Horn 🔊 (FAAAAH)",
   "description": "Plays FAAAAH sound whenever you make a coding error",
   "version": "1.0.0",
   "author": "Monir Hossain",
